src/objects/DMSPM__SPM_Forecast_Member__c.object
<CustomObject>
    <fields>
        <fullName>DMSPM__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMSPM__Forecast_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMSPM__Pipeline_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pipeline Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Forecast__c</fullName>
        <label>SPM Forecast</label>
        <referenceTo>DMSPM__SPM_Forecast__c</referenceTo>
        <relationshipName>SMP_Forecast_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Team_Member__c</fullName>
        <label>SPM Team Member</label>
        <referenceTo>DMSPM__SPM_Team_Member__c</referenceTo>
        <relationshipName>SMP_Forecast_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dealmaker SPM Forecast Member</label>
    <nameField>
        <label>SPM Forecast Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker SPM Forecast Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>